Internal change
PiperOrigin-RevId: 622767734